added links to sponsor images

--- a/past_shows/index.html
+++ b/past_shows/index.html
@@ -289,22 +289,33 @@
   </h1>
   <img src="/images/sponsors/alex_sunnyside_playroom.png" class="sponsor">
   <img src="/images/sponsors/central_oh_women_in_the_trades.png" class="sponsor">
-  <img src="/images/sponsors/david_myers.png" class="sponsor">
+  <a href="https://www.davidmyersart.com/" target="_blank">
+    <img src="/images/sponsors/david_myers.png" class="sponsor">
+  </a>
   <img src="/images/sponsors/deja_vu.png" class="sponsor">
   <img src="/images/sponsors/family_room_coffee_and_bake_shop.png" class="sponsor">
-  <img src="/images/sponsors/good_medicine.png" class="sponsor">
+  <a href="https://www.goodmedicineproductions.org/" target="_blank">
+    <img src="/images/sponsors/good_medicine.png" class="sponsor">
+  </a>
   <img src="/images/sponsors/horvath_vision_care_northwoods.png" class="sponsor">
   <img src="/images/sponsors/jersey_mikes.png" class="sponsor">
   <img src="/images/sponsors/laughing_ogre.png" class="sponsor">
   <img src="/images/sponsors/lime_light_media_line.png" class="sponsor">
-  <img src="/images/sponsors/mat_piamonte_f&m_cpa.png" class="sponsor">
-  <img src="/images/sponsors/musicologie.png" class="sponsor">
+  <a href="https://www.fmcpallc.com/" target="_blank">
+    <img src="/images/sponsors/mat_piamonte_f&m_cpa.png" class="sponsor">
+  </a>
+  <a href="https://musicologie.com/locations/westerville" target="_blank">
+    <img src="/images/sponsors/musicologie.png" class="sponsor">
+  </a>
   <img src="/images/sponsors/mylin_ltd.png" class="sponsor">
   <img src="/images/sponsors/neighborhood_bridges.png" class="sponsor">
   <img src="/images/sponsors/north_high.png" class="sponsor">
   <img src="/images/sponsors/staufs_coffee.png" class="sponsor">
   <img src="/images/sponsors/straub_dance_center.png" class="sponsor">
   <img src="/images/sponsors/westerville_north_music_boosters.png" class="sponsor">
+  <a href="https://www.meganleedesigns.com/" target="_blank">
+    <img src="/images/sponsors/megan_lee.png" class="sponsor">
+  </a>
 </figure>
 <footer class="bg-black bottom-0 w-100 pa3" role="contentinfo">
   <div class="flex justify-between">
