updated sponsor logos

--- a/past_shows/index.html
+++ b/past_shows/index.html
@@ -16,7 +16,7 @@
     
 
     
-<link rel="stylesheet" href="/ananke/css/main.min.959199c6d5df7a6f64c697d5f7fe51fd909a8eb93dace05ee0c243404f865326.css" >
+<link rel="stylesheet" href="/ananke/css/main.min.31ee5a19260ba28dce573a1638bcdc302d7541dea767d388b53e23bfddd30e0e.css" >
 
 
 
@@ -289,16 +289,19 @@
   </h1>
   
   
-  <a href="https://www.davidmyersart.com/" target="_blank">
+  <a href="https://www.davidmyersart.com/" target="_blank" class="sponsor">
     <img src="/images/sponsors/david_myers.png" class="sponsor">
   </a>
+  <a></a>
   
   
   <a href="https://www.goodmedicineproductions.org/" target="_blank">
     <img src="/images/sponsors/good_medicine.png" class="sponsor">
   </a>
   
-  <img src="/images/sponsors/jersey_mikes.png" class="sponsor">
+  <a href="https://www.jerseymikes.com/2065/westerville-oh" target="_blank">
+    <img src="/images/sponsors/jersey_mikes.png" class="sponsor">
+  </a>
   
   
   <a href="https://www.fmcpallc.com/" target="_blank">
@@ -308,14 +311,27 @@
     <img src="/images/sponsors/musicologie.png" class="sponsor">
   </a>
   
-  <img src="/images/sponsors/neighborhood_bridges.png" class="sponsor">
+  <a href="https://neighborhoodbridges.org/" target="_blank">
+    <img src="/images/sponsors/neighborhood_bridges.png" class="sponsor">
+  </a>
   
   
-  <img src="/images/sponsors/straub_dance_center.png" class="sponsor">
-  <img src="/images/sponsors/westerville_north_music_boosters.png" class="sponsor">
+  <a href="https://cindystraubsperformingarts.com/" target="_blank">
+    <img src="/images/sponsors/straub_dance_center.png" class="sponsor">
+  </a>
+  <a href="www.wnmb.org" target="_blank">
+    <img src="/images/sponsors/westerville_north_music_boosters.png" class="sponsor">
+  </a>
   <a href="https://www.meganleedesigns.com/" target="_blank">
     <img src="/images/sponsors/megan_lee.png" class="sponsor">
   </a>
+  <a href="https://swensonsdriveins.com/locations/polaris/">
+    <img src="images/sponsors/swensons.png" class="sponsor">
+  </a>
+  <a href="https://oxbs.com/" target="_blank">
+    <img src="images/sponsors/ox-bs.png" class="sponsor">
+  </a>
+  <img src="images/sponsors/tyler_domer.png" class="sponsor">
 </figure>
 <footer class="bg-black bottom-0 w-100 pa3" role="contentinfo">
   <div class="flex justify-between">
