added hoffman and kuhn sponsor

--- a/upcoming_shows/index.html
+++ b/upcoming_shows/index.html
@@ -188,6 +188,9 @@
   <h1 class="sponsors-title">
     Please support our sponsors!
   </h1>
+  <a href="http://www.hoffmanandkuhn.com/" target="_blank" class="sponsor">
+    <img src="/images/sponsors/hoffman_and_kuhn.png" class="sponsor">
+  </a>
   
   
   <a href="https://www.davidmyersart.com/" target="_blank" class="sponsor">
