updated upcoming shows and past shows

--- a/past_shows/index.html
+++ b/past_shows/index.html
@@ -47,7 +47,7 @@
 
   <meta itemprop="name" content="Past Shows">
   <meta itemprop="description" content="Check out Troupe 513&#39;s past productions!">
-  <meta itemprop="wordCount" content="267">
+  <meta itemprop="wordCount" content="298">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Past Shows">
   <meta name="twitter:description" content="Check out Troupe 513&#39;s past productions!">
@@ -154,6 +154,21 @@
       </header>
       <div class="nested-copy-line-height lh-copy f4 nested-links mid-gray helvetica">
         <figure class="nested-copy-line-height lh-copy f4 nested-links black helvetica"><img src=""><figcaption>
+      <h4>2025-2026</h4>
+    </figcaption>
+</figure>
+
+<p>Les Misérables - Fall Musical</p>
+<ul>
+<li><a href="https://drive.google.com/file/d/1d9E8p4JjmgNFtkiTgeJILjTXy_tRl4Cx/view?usp=sharing" target="_blank">Playbill</a></li>
+</ul>
+<p>Time Stands Still - Student Directed Full Length</p>
+<p>Where There&rsquo;s No Will - Student Directed Full Length</p>
+<p>Dead Man Walking - Winter Musical</p>
+<ul>
+<li><a href="https://drive.google.com/file/d/1hluGZRg6m2KbiI8XofC6Qf7zKMifRVn5/view?usp=sharing" target="_blank">Playbill</a></li>
+</ul>
+<figure class="nested-copy-line-height lh-copy f4 nested-links black helvetica"><img src=""><figcaption>
       <h4>2024-2025</h4>
     </figcaption>
 </figure>
@@ -339,7 +354,7 @@
 <footer class="bg-black bottom-0 w-100 pa3" role="contentinfo">
   <div class="flex justify-between">
   <a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href="https://wshstheatre.org/" >
-    &copy;  Troupe 513 2025 
+    &copy;  Troupe 513 2026 
   </a>
     <div><div class="ananke-socials"><a href="https://www.instagram.com/wshstheatre.513/" target="_blank" rel="noopener"
         class="ananke-social-link link-transition instagram link dib z-999 pt3 pt0-l mr1"
