--- a/upcoming_shows/index.html
+++ b/upcoming_shows/index.html
@@ -154,14 +154,23 @@
       </header>
       <div class="nested-copy-line-height lh-copy f4 nested-links mid-gray helvetica">
         <p><figure class="nested-copy-line-height lh-copy f4 nested-links black helvetica"><img src=""><figcaption>
-      <h4>Les Misérables</h4>
+      <h4>Boeing Boeing</h4>
     </figcaption>
 </figure>
 
-<figure><img src="/images/les_mis_logo.png">
+<figure><img src="/images/boeing_boeing_logo.png">
 </figure>
 </p>
-<p>In nineteenth century France, Jean Valjean is released from years of unjust imprisonment, but finds nothing in store for him but mistrust and mistreatment. He breaks his parole in hopes of starting a new life, initiating a lifelong struggle for redemption as he is relentlessly pursued by police inspector Javert, who refuses to believe Valjean can change his ways. Finally, during the Paris student uprising of 1832, Javert must confront his ideals after Valjean spares his life and saves that of the student revolutionary who has captured the heart of Valjean&rsquo;s adopted daughter.</p>
+<p>This 1960s French farce adapted for the English-speaking stage features self-styled Parisian lothario Bernard, who has Italian, German and American fiancées, each a beautiful airline hostess with frequent “layovers.” He keeps “one up, one down, and one pending” – until unexpected schedule changes bring all three to Paris, and Bernard’s apartment, at the same time.</p>
+<p><figure class="nested-copy-line-height lh-copy f4 nested-links black helvetica"><img src=""><figcaption>
+      <h4>Grease</h4>
+    </figcaption>
+</figure>
+
+<figure><img src="/images/grease_logo.png">
+</figure>
+</p>
+<p>Grease, based on the timeless classic musical movie will come to life on the South Stage. Join Sandy, Danny, Rizzo, Eugene, Ms Lynch and the rest of Rydell HS and enjoy the songs you know by heart!</p>
 
       </div>
     </article>
@@ -240,7 +249,7 @@
 <footer class="bg-black bottom-0 w-100 pa3" role="contentinfo">
   <div class="flex justify-between">
   <a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href="https://wshstheatre.org/" >
-    &copy;  Troupe 513 2025 
+    &copy;  Troupe 513 2026 
   </a>
     <div><div class="ananke-socials"><a href="https://www.instagram.com/wshstheatre.513/" target="_blank" rel="noopener"
         class="ananke-social-link link-transition instagram link dib z-999 pt3 pt0-l mr1"
